--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,13 @@
-/* Add CSS Styling */
+.button{
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+
+#click-first{
+    background-color: black;
+    color: white;
+}
+
+#click-second{
+    background-color: yellow;
+}
